
More object docs.
----------------------------------------------------------------------
Thu Jul  3 23:37:45 2003                        Michael Jennings (mej)

Forgot to fix these before committing. :(
----------------------------------------------------------------------
Wed Jul  9 19:49:39 2003                        Michael Jennings (mej)

Some minor rearranging.
----------------------------------------------------------------------
Thu Oct 30 16:03:29 2003                        Michael Jennings (mej)

Make SPIF_STR_STR() convenience macro *always* return a string, even
if the str object is NULL.
----------------------------------------------------------------------
Thu Oct 30 18:12:35 2003                        Michael Jennings (mej)

Added support for object "properties."  A property is a member
variable with corresponding get/set methods.

I'll probably flesh this out more as I use it more.
----------------------------------------------------------------------
Fri Oct 31 15:21:53 2003                        Michael Jennings (mej)

Fixes to string class find/splice routines.

Added SPIF_DEFINE_PROPERTY_FUNC_NONOBJ() macro for defining get/set
methods of a property which is not an object.  It should be used in
place of SPIF_DEFINE_PROPERTY_FUNC() for spif_*_t types that are not
objects, such as spif_int32_t and spif_sockport_t.
----------------------------------------------------------------------
Sat Nov  1 13:56:22 2003                        Michael Jennings (mej)

Documentation updates for doxygen 1.3.x.
----------------------------------------------------------------------
Wed Nov  5 15:05:35 2003                        Michael Jennings (mej)

Oops.  Forgot to fix a couple.
----------------------------------------------------------------------
Wed Nov  5 15:13:24 2003                        Michael Jennings (mej)

Let's try that again, shall we?
----------------------------------------------------------------------